--- a/hacker_news_post_performance/hacker_news_post_performance.ipynb
+++ b/hacker_news_post_performance/hacker_news_post_performance.ipynb
@@ -20,9 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -57,9 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -88,9 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -132,9 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -164,9 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -198,9 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import datetime as dt\n",
@@ -222,9 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -266,9 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -298,7 +282,6 @@
    "cell_type": "code",
    "execution_count": 47,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -355,9 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -389,7 +370,7 @@
     "collapsed": true
    },
    "source": [
-    "Great! Now we know the peak times to post HN Ask comments if you want to get the most amount of replies.\n",
+    "Great! Now we know the peak times to post Hacker News Ask comments if you want to get the most amount of replies.\n",
     "\n",
     "Note that these times are in the US Eastern Time zone, so if you want to take advantage of the best posting times you have to convert them to your own time zone.\n",
     "\n",
@@ -397,6 +378,13 @@
     "- It would be interesting to graph all the data and see whether there's a function that explains the variation.\n",
     "- In the top 5 results we see that mid-afternoon (15-16) hs and early in the night (20-21) hs are peak times, but it is peculiar to see 2 am as the second best time. One hypotheses that could explain this is that these posts are not coming from the US but from another timezone."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -415,7 +403,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
