--- a/hacker_news_post_performance/hacker_news_post_performance.ipynb
+++ b/hacker_news_post_performance/hacker_news_post_performance.ipynb
@@ -360,7 +360,7 @@
     "    hour = dt.datetime.strptime(item[1], '%H')\n",
     "    hour = hour.strftime('%H:%M')\n",
     "    average_comments = item[0]\n",
-    "    print('{hr}: {avg:2f} average comments per post'.format(hr = hour, avg = average_comments))\n",
+    "    print('{hr}: {avg:.2f} average comments per post'.format(hr = hour, avg = average_comments))\n",
     "    "
    ]
   },
