--- a/supervised_learning_with_scikit-learn/supervised_learning_with_scikit_learn.ipynb
+++ b/supervised_learning_with_scikit-learn/supervised_learning_with_scikit_learn.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Supervised Learning with Scikit-learn On The Iris Flower Dataset\n",
+    "\n",
+    "In this notebook, I will apply the concepts learned in DataCamp to the famous Iris Flower Dataset collected by botanist E. S. Anderson and popularized by statistician and biologist Ronald Fisher.\n",
+    "\n",
+    "Track: Machine Learning Scientist With Python\n",
+    "\n",
+    "Course: Supervised Learning With Scikit-learn"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -54,11 +67,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "DESCR = Description of the dataset\n",
-    "feature_names = 'petal_width', 'petal_length', 'sepal_width', 'sepal_length'\n",
-    "data = ndarray with 4 columns, containing the numeric values for each of the feature_names.\n",
-    "target_names = an array of just three values. Index 0 is 'setosa', 1 is 'versicolor' and 2 is 'virginica'.\n",
-    "target = contains values 0, 1 or 2, indicating the corresponding 'target_name'"
+    "- 'DESCR' = Description of the dataset\n",
+    "- 'feature_names' = a list with only four elements, which serve as column names for the four columns in 'data': 'petal_width', 'petal_length', 'sepal_width', 'sepal_length'\n",
+    "- 'data' = ndarray with 4 columns, containing the numeric values for each of the feature_names.\n",
+    "- 'target_names' = an array of just three values. Index 0 is 'setosa', 1 is 'versicolor' and 2 is 'virginica'.\n",
+    "- 'target' = contains values 0, 1 or 2, indicating the corresponding 'target_name'"
    ]
   },
   {
@@ -91,11 +104,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Las features tienen que ser continuas, no discretas\n",
+    "In order to implement K-Nearest Neighbors with scikit-learn, we need to take into account the following requirements:\n",
     "\n",
-    "No tiene que haber missing values\n",
-    "\n",
-    "Tienen que ser numpy arrays o pandas dataframes\n"
+    "- Features must be continuous, not discrete.\n",
+    "- There can't be missing values\n",
+    "- Data has to be stored in numpy arrays or pandas dataframes"
    ]
   },
   {
@@ -159,14 +172,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Por que usan .values? Para que sea un numpy array. Pero la documentación dice: \n",
+    "### Study note:\n",
     "\n",
-    "Warning\n",
+    "Why do they use .values? In order to obtain a numpy array. But the documentation says:\n",
     "\n",
-    "We recommend using DataFrame.to_numpy() instead. \n",
+    "`Warning: We recommend using DataFrame.to_numpy() instead.`\n",
     "\n",
-    "\n",
-    "Datacamp: Without using .values, X and y are a DataFrame and Series respectively; the scikit-learn API will accept them in this form also as long as they are of the right shape."
+    "Datacamp says: Without using .values, X and y are a DataFrame and Series respectively; the scikit-learn API will accept them in this form also as long as they are of the right shape."
    ]
   },
   {
@@ -174,8 +186,15 @@
    "metadata": {},
    "source": [
     "How much can we trust the prediction?\n",
-    "# How to measure model performance."
+    "# How to measure model performance"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
