made prediction with the fitted model

--- a/supervised_learning_with_scikit-learn/supervised_learning_with_scikit_learn.ipynb
+++ b/supervised_learning_with_scikit-learn/supervised_learning_with_scikit_learn.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
        "sklearn.utils.Bunch"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -76,25 +76,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = iris.data\n",
+    "X = iris.data\n",
     "y = iris.target\n",
     "df = pd.DataFrame(x, columns=iris.feature_names)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create train and test sets\n",
     "\n",
-    "x_train = x[:145, :]\n",
-    "x_test = x[145:, :]\n",
+    "X_train = x[:145, :]\n",
+    "X_test = x[145:, :]\n",
     "\n",
     "y_train = y[:145]\n",
     "y_test = y[145:]\n"
@@ -120,20 +120,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
-       "                     metric_params=None, n_jobs=None, n_neighbors=6, p=2,\n",
-       "                     weights='uniform')"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction: 2\n",
+      "Actual value: 2\n",
+      "Prediction: 2\n",
+      "Actual value: 2\n",
+      "Prediction: 2\n",
+      "Actual value: 2\n",
+      "Prediction: 2\n",
+      "Actual value: 2\n",
+      "Prediction: 2\n",
+      "Actual value: 2\n"
+     ]
     }
    ],
    "source": [
@@ -144,48 +150,23 @@
     "\n",
     "# we instantiate the classifier\n",
     "knn = KNeighborsClassifier(n_neighbors=6)\n",
-    "knn.fit(iris['data'], iris['target'])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import KNeighborsClassifier from sklearn.neighbors\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
-    "# Create arrays for the features and the response variable. \n",
-    "# Notice we named the feature array X and response variable y: This is in accordance with the common scikit-learn practice\n",
-    "y = df['party'].values\n",
-    "X = df.drop('party', axis=1).values\n",
+    "# we fit the model to the data\n",
+    "knn.fit(X_train, y_train)\n",
     "\n",
-    "# Create a k-NN classifier with 6 neighbors\n",
-    "knn = KNeighborsClassifier(n_neighbors=6)\n",
+    "# and now we use our model to label the test data\n",
+    "prediction = knn.predict(X_test)\n",
     "\n",
-    "# Fit the classifier to the data\n",
-    "knn.fit(X, y)\n"
+    "for i,j in zip(prediction, y_test):\n",
+    "    print(\"Prediction: {}\".format(i))\n",
+    "    print(\"Actual value: {}\".format(j))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Study note:\n",
-    "\n",
-    "Why do they use .values? In order to obtain a numpy array. But the documentation says:\n",
-    "\n",
-    "`Warning: We recommend using DataFrame.to_numpy() instead.`\n",
-    "\n",
-    "Datacamp says: Without using .values, X and y are a DataFrame and Series respectively; the scikit-learn API will accept them in this form also as long as they are of the right shape."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "How much can we trust the prediction?\n",
+    "It worked! But, was it a coincidence? How much can we trust our model?\n",
     "# How to measure model performance"
    ]
   },
