updated model measurement

--- a/supervised_learning_with_scikit-learn/supervised_learning_with_scikit_learn.ipynb
+++ b/supervised_learning_with_scikit-learn/supervised_learning_with_scikit_learn.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -24,13 +24,14 @@
        "sklearn.utils.Bunch"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn import datasets\n",
+    "from sklearn.model_selection import train_test_split\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -76,28 +77,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "X = iris.data\n",
-    "y = iris.target\n",
-    "df = pd.DataFrame(x, columns=iris.feature_names)"
+    "y = iris.target"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create train and test sets\n",
     "\n",
-    "X_train = x[:145, :]\n",
-    "X_test = x[145:, :]\n",
-    "\n",
-    "y_train = y[:145]\n",
-    "y_test = y[145:]\n"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=21, stratify=y)"
    ]
   },
   {
@@ -120,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -131,22 +127,99 @@
      "text": [
       "Prediction: 2\n",
       "Actual value: 2\n",
+      "Prediction: 1\n",
+      "Actual value: 2\n",
+      "Prediction: 2\n",
+      "Actual value: 2\n",
+      "Prediction: 2\n",
+      "Actual value: 2\n",
+      "Prediction: 1\n",
+      "Actual value: 1\n",
+      "Prediction: 0\n",
+      "Actual value: 0\n",
+      "Prediction: 1\n",
+      "Actual value: 1\n",
+      "Prediction: 0\n",
+      "Actual value: 0\n",
+      "Prediction: 0\n",
+      "Actual value: 0\n",
+      "Prediction: 1\n",
+      "Actual value: 1\n",
+      "Prediction: 0\n",
+      "Actual value: 0\n",
+      "Prediction: 2\n",
+      "Actual value: 2\n",
+      "Prediction: 0\n",
+      "Actual value: 0\n",
+      "Prediction: 2\n",
+      "Actual value: 1\n",
+      "Prediction: 2\n",
+      "Actual value: 2\n",
+      "Prediction: 0\n",
+      "Actual value: 0\n",
+      "Prediction: 0\n",
+      "Actual value: 0\n",
+      "Prediction: 0\n",
+      "Actual value: 0\n",
+      "Prediction: 1\n",
+      "Actual value: 1\n",
+      "Prediction: 0\n",
+      "Actual value: 0\n",
       "Prediction: 2\n",
       "Actual value: 2\n",
       "Prediction: 2\n",
       "Actual value: 2\n",
       "Prediction: 2\n",
       "Actual value: 2\n",
+      "Prediction: 0\n",
+      "Actual value: 0\n",
+      "Prediction: 1\n",
+      "Actual value: 1\n",
+      "Prediction: 1\n",
+      "Actual value: 1\n",
+      "Prediction: 1\n",
+      "Actual value: 1\n",
+      "Prediction: 0\n",
+      "Actual value: 0\n",
+      "Prediction: 0\n",
+      "Actual value: 0\n",
+      "Prediction: 1\n",
+      "Actual value: 1\n",
       "Prediction: 2\n",
-      "Actual value: 2\n"
+      "Actual value: 2\n",
+      "Prediction: 2\n",
+      "Actual value: 2\n",
+      "Prediction: 0\n",
+      "Actual value: 0\n",
+      "Prediction: 0\n",
+      "Actual value: 0\n",
+      "Prediction: 1\n",
+      "Actual value: 1\n",
+      "Prediction: 2\n",
+      "Actual value: 2\n",
+      "Prediction: 2\n",
+      "Actual value: 2\n",
+      "Prediction: 1\n",
+      "Actual value: 1\n",
+      "Prediction: 1\n",
+      "Actual value: 1\n",
+      "Prediction: 2\n",
+      "Actual value: 2\n",
+      "Prediction: 1\n",
+      "Actual value: 1\n",
+      "Prediction: 1\n",
+      "Actual value: 1\n",
+      "Prediction: 0\n",
+      "Actual value: 0\n",
+      "Prediction: 2\n",
+      "Actual value: 2\n",
+      "Prediction: 1\n",
+      "Actual value: 1\n"
      ]
     }
    ],
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "\n",
-    "# We separate the data into train and test dataframes\n",
-    "train = df\n",
     "\n",
     "# we instantiate the classifier\n",
     "knn = KNeighborsClassifier(n_neighbors=6)\n",
@@ -166,16 +239,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It worked! But, was it a coincidence? How much can we trust our model?\n",
+    "It worked pretty well! But, how well? How much can we trust our model?\n",
     "# How to measure model performance"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The accuracy of a model is defined as the fraction of correct predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9555555555555556"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "knn.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note: This is a work in progress"
+   ]
   }
  ],
  "metadata": {
