--- a/datacamp_machine_learning_scientist_with_python/01_supervised_learning_with_scikit-learn/01_KNN_iris_flowers.ipynb
+++ b/datacamp_machine_learning_scientist_with_python/01_supervised_learning_with_scikit-learn/01_KNN_iris_flowers.ipynb
@@ -7,11 +7,13 @@
     "# Supervised Learning with Scikit-learn \n",
     "# KNN with the Iris Flower Dataset\n",
     "\n",
-    "In this notebook, I will apply the concepts learned in DataCamp to the famous Iris Flower Dataset collected by botanist E. S. Anderson and popularized by statistician and biologist Ronald Fisher.\n",
+    "In this notebook, I will apply the classifications concepts learned in DataCamp to the famous Iris Flower Dataset collected by botanist E. S. Anderson and popularized by statistician and biologist Ronald Fisher.\n",
     "\n",
     "Track: Machine Learning Scientist With Python\n",
     "\n",
-    "Course: Supervised Learning With Scikit-learn"
+    "Course: Supervised Learning With Scikit-learn\n",
+    "\n",
+    "Chapter: Classification"
    ]
   },
   {
