--- a/datacamp_machine_learning_scientist_with_python/01_supervised_learning_with_scikit-learn/02_MNIST_hand_drawn_digits.ipynb
+++ b/datacamp_machine_learning_scientist_with_python/01_supervised_learning_with_scikit-learn/02_MNIST_hand_drawn_digits.ipynb
@@ -7,7 +7,13 @@
     "# Supervised Learning with Scikit-learn \n",
     "# KNN with the MNIST digits dataset\n",
     "\n",
-    "Now let's try with more dimension. Scikit-learn includes a reduced version of the classic MNIST digits recognition dataset, which has 10 classes, the digits 0 through 9.\n",
+    "Track: Machine Learning Scientist With Python\n",
+    "\n",
+    "Course: Supervised Learning With Scikit-learn\n",
+    "\n",
+    "Chapter: Classification\n",
+    "\n",
+    "We've classified the iris flowers. Now let's try with more dimensions. Scikit-learn includes a reduced version of the classic MNIST digits recognition dataset, which has 10 classes, the digits 0 through 9.\n",
     "\n",
     "Datacamp says:\n",
     "\n",
