--- a/datacamp_machine_learning_scientist_with_python/01_supervised_learning_with_scikit-learn/05_Logistic_regression_and_the_ROC_curve.ipynb
+++ b/datacamp_machine_learning_scientist_with_python/01_supervised_learning_with_scikit-learn/05_Logistic_regression_and_the_ROC_curve.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,8 +44,10 @@
     "\n",
     "from sklearn import datasets\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import roc_curve\n"
+    "from sklearn.metrics import roc_curve\n",
+    "from sklearn.metrics import roc_auc_score\n"
    ]
   },
   {
@@ -241,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +302,7 @@
     "\n",
     "# And we plot it\n",
     "\n",
-    "plt.plot([0, 1], [0, 1], 'k--')\n",
+    "plt.plot([0, 1], [0, 1], 'k--') # this creates a 45-degree dashed line\n",
     "plt.plot(fpr, tpr, label = 'Logistic Regression')\n",
     "plt.xlabel('False Positive Rate')\n",
     "plt.ylabel('True Positive Rate')\n",
@@ -312,14 +314,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "predict_proba returns an array with two columns: each column contains the probabilities for the respective target values (0 or 1). We choose the second column, the one with index 1, that is, the probabilities of predicted labels being '1'.\n",
+    "We used the predicted probabilities of the model assigning a value of 1 to the observation in question. This is because to compute the ROC we do not merely want the predictions on the test set, but we want the probability that our logreg model outputs before using a threshold to predict the label.\n",
+    "\n",
+    "To do this, we use the method predict_proba to the model and pass it the test data. predict_proba returns an array with two columns: each column contains the probabilities for the respective target values (0 or 1, negative or positive). We choose the second column, the one with index 1, that is, the probabilities of predicted labels being '1' (positive).\n",
     "\n",
     "I was curious about this."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -514,8 +518,69 @@
     "\n",
     "sum_cols = see_two_cols_pred_proba[:,0] + see_two_cols_pred_proba[:,1]\n",
     "\n",
-    "# As expected, the sum of the probabilities for '0' and '1' equals 1.\n",
     "print(sum_cols)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As expected, the sum of the probabilities for '0' and '1' equals 1.\n",
+    "\n",
+    "We compute the area under the curve"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9802308802308802\n"
+     ]
+    }
+   ],
+   "source": [
+    "auc = roc_auc_score(y_test, y_pred_prob)\n",
+    "\n",
+    "print(auc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## AUC using cross-validation\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.99418605 0.99192506 0.99698189 0.98289738 0.99664655]\n"
+     ]
+    }
+   ],
+   "source": [
+    "cv_scores = cross_val_score(logreg, X, y, cv=5, scoring='roc_auc')\n",
+    "\n",
+    "print(cv_scores)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Say you have a binary classifier that in fact is just randomly making guesses. It would be correct approximately 50% of the time, and the resulting ROC curve would be a diagonal line in which the True Positive Rate and False Positive Rate are always equal. The Area under this ROC curve would be 0.5. This is one way in which the AUC is an informative metric to evaluate a model. If the AUC is significatively greater than 0.5, the model is better than random guessing."
    ]
   },
   {
