--- a/datacamp_machine_learning_scientist_with_python/01_supervised_learning_with_scikit-learn/06_Hyperparameter_tuning.ipynb
+++ b/datacamp_machine_learning_scientist_with_python/01_supervised_learning_with_scikit-learn/06_Hyperparameter_tuning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,7 @@
     "from sklearn import datasets\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import GridSearchCV\n",
+    "from numpy.random import randint\n",
     "\n",
     "data = datasets.load_breast_cancer()\n",
     "X = data.data\n",
@@ -20,12 +21,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Grid Search\n",
+    "\n",
     "For now, we won't split the data into train and test, because we just want to show how GridSearchCV works."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -82,8 +85,87 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It's grossly overfitted xD"
+    "Is it overfitted? As stated before, we don't care about that just now. We just want to see how GridSearchCV works. \n",
+    "\n",
+    "GridSearchCV can be computationally expensive, especially if we are searching over a large hyperparameter space and dealing with multiple hyperparameters.\n",
+    "\n",
+    "A solution to this is to use RandomizedSearchCV, in which not all hyperparameter valies are tried out. Instead, a fixed number of hyperparameter settings is sampled from specific probability distributions. \n",
+    "\n",
+    "RandomizedSearchCV will never outperform GridSearchCV. Instead, it is valuable because it saves on computation time.\n",
+    "\n",
+    "Let's take a look.\n",
+    "\n",
+    "# RandomizedSearchCV\n",
+    "\n",
+    "We will try it out with a new model: the Decision Tree. Decision trees have many parameters that can be tuned, such as max_features, max_depth and min_samples_leaf. This makes it an ideal use case for RandomizedSearchCV.\n",
+    "\n",
+    "We are going to use RandomizedSearchCV to find the optimal hyperparameters."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.model_selection import RandomizedSearchCV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tuned Decision Tree Parameters: {'min_samples_leaf': 4, 'max_features': 6, 'max_depth': None, 'criterion': 'entropy'}\n",
+      "Best score is 0.9490333919156415\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.7/site-packages/sklearn/model_selection/_search.py:814: DeprecationWarning: The default of the `iid` parameter will change from True to False in version 0.22 and will be removed in 0.24. This will change numeric results when test-set sizes are unequal.\n",
+      "  DeprecationWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Setup the parameters and distributions to sample from:\n",
+    "\n",
+    "param_dist = {'max_depth': [3, None],\n",
+    "             'max_features': [3, 6],\n",
+    "             'min_samples_leaf': [3, 4],\n",
+    "             'criterion': ['gini', 'entropy']}\n",
+    "\n",
+    "# Instantiate a Decision Tree classifier\n",
+    "\n",
+    "tree = DecisionTreeClassifier()\n",
+    "\n",
+    "# Instantiate the RandomizedSearchCV object:\n",
+    "\n",
+    "tree_cv = RandomizedSearchCV(tree, param_dist, cv=5)\n",
+    "\n",
+    "# Fit it to the data\n",
+    "\n",
+    "tree_cv.fit(X, y)\n",
+    "\n",
+    "# Print the tuned parameters and score\n",
+    "\n",
+    "print('Tuned Decision Tree Parameters: {}'.format(tree_cv.best_params_))\n",
+    "print('Best score is {}'.format(tree_cv.best_score_))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
